--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
           <p>still deploying contributions on github</p>
           <a href="#"> visit</a><br>
         </div>
+        
+        <div class="col">
+          <img src="paper.jpg">
+          <h2>resume</h2>
+          <p>get a glance of my resume</p>
+          <a href="https://pushpakninave.github.io/resume/"> visit</a><br>
+        </div>
 
       </div>
     </section>
