--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         
         <div class="col">
-          <img src="paper.jpg">
+          <img src="https://github.com/pushpakninave/myporfolio/blob/main/images/paper.jpg">
           <h2>resume</h2>
           <p>get a glance of my resume</p>
           <a href="https://pushpakninave.github.io/resume/"> visit</a><br>
